--- a/.gitignore
+++ b/.gitignore
@@ -26,15 +26,57 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
 ### VS Code ###
 .vscode/
 
 ### DB properties file####
 database.properties
+
+### Vue.js ###
+# Node.js 모듈 디렉토리
+/front/node_modules/
+
+# 빌드 결과물
+/front/dist/
+.front/build/
+
+# IDE 및 편집기 관련 파일
+/.idea/
+/.vscode/
+/*.suo
+/*.ntvs_analysis.dat
+/.project
+/.classpath
+/.settings/
+/*.sublime-project
+/*.sublime-workspace
+
+# OS 관련 파일
+.DS_Store
+Thumbs.db
+
+# 환경 변수 파일
+/front/.env
+/front/.env.local
+/front/.env.*.local
+
+# 로그 파일
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Jest 테스트 결과
+/front/coverage/
+
+# 빌드 및 배포 아티팩트
+*.pem
+*.key
+*.crt
+*.p12
+*.csr
+*.der
+
+# 기타 무시할 파일/디렉토리 (예: 생성되는 캐시 파일)
+*.log
+*.tgz
+
