--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=move24
 
 # 파일 저장 경로
-file.upload-dir=src/main/resources/static/upload/staff
+file.upload-dir=/Users/jkh/git/move24/upload/staff
 
 # DB properties import (git ignored)
 # spring.config.import=classpath:database.properties
@@ -22,6 +22,9 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 
 # ?에 어떤 값이 들어갔는지 알려 준다.
-logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.type=trace
+
+logging.level.org.springframework.web=DEBUG
+
 
 
