feat: 전체 기사 게시글 화면, 특정 기사 게시글 화면 구현 완료

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=move24
 logging.level.org.springframework.web=DEBUG
 
 # 파일 저장 경로
-file.upload-dir=/Users/jkh/git/move24/upload/staff
+file.upload-dir=/Users/jkh/git/move24/front/public/member
 
 # DB properties import (git ignored)
 # spring.config.import=classpath:database.properties
@@ -16,10 +16,15 @@ spring.datasource.driver-class-name=org.h2.Driver
 # 테이블 자동 생성o : create / 자동 생성x : none(default)
 spring.jpa.hibernate.ddl-auto=none
 
+# 페이지네이션할 때 0이 아니라 1부터 시작
+# spring.data.web.pageable.one-indexed-parameters=true
+
 # 출력된 SQL을 더 읽기 쉽도록 포맷(한 줄 -> 여러 줄)
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=debug
+
+
 
 
 
