--- a/back/build.gradle
+++ b/back/build.gradle
@@ -24,39 +24,41 @@ repositories {
 }
 
 dependencies {
+	// spring
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	// spring security
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.jetbrains:annotations:24.0.0'
 
 	// p6spy
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
+	// h2
 	runtimeOnly 'com.h2database:h2'
 
 	// maria db
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
-	annotationProcessor 'org.projectlombok:lombok'
+	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:4.0.0'
-
-	// spring security
-//	testImplementation 'org.springframework.security:spring-security-test'
-
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-	//test 롬복 사용
+	// test 롬복 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
-	//Querydsl 추가
+	// spring security test
+//	testImplementation 'org.springframework.security:spring-security-test'
+
+	//Querydsl
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
